[package]
name = "bevy_replicon_renet2"
version = "0.1.1"
authors = [
  "Hennadii Chernyshchyk <genaloner@gmail.com>",
  "koe <ukoe@protonmail.com>",
]
edition = "2021"
description = "Integration with renet2 for bevy_replicon"
keywords = [
  "bevy",
  "multiplayer",
  "netcode",
  "replication",
  "server-authoritative",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/UkoeHB/renet2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]

[dependencies]
bevy_replicon = { version = "0.29", default-features = false }
bevy_renet2 = { path = "../bevy_renet2", default-features = false }
bevy = { version = "0.15", default-features = false }

[dev-dependencies]
serde = "1.0"
clap = { version = "4.1", features = ["derive"] }
bevy_renet2 = { path = "../bevy_renet2", features = ["native_transport"] }
bevy = { version = "0.15", default-features = false, features = [
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_window",
  "bevy_gizmos",
  "x11",
  "default_font",
] }
log = "0.4"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "std", "tracing-log" ] }

[features]
default = ["renet_serde", "netcode", "client", "server"]

# Re-exports of bevy_replicon features
client = ["bevy_replicon/client"]
server = ["bevy_replicon/server"]

# Re-exports of renet features
renet_serde = ["bevy_renet2/serde"]
netcode = ["bevy_renet2/netcode"]
native_transport = ["netcode", "bevy_renet2/native_transport"]
memory_transport = ["netcode", "bevy_renet2/memory_transport"]
wt_server_transport = ["netcode", "bevy_renet2/wt_server_transport"]
wt_client_transport = ["netcode", "bevy_renet2/wt_client_transport"]
ws_server_transport = ["netcode", "bevy_renet2/ws_server_transport"]
ws_client_transport = ["netcode", "bevy_renet2/ws_client_transport"]

[[test]]
name = "transport"
required-features = ["native_transport", "client", "server"]
