[package]
name = "demo_chat"
version = "0.1.0"
authors = ["koe <ukoe@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
renet2 = { path = "../renet2" }
renet2_netcode = { path = "../renet2_netcode", features = ["native_transport", "serde"] }
renet2_visualizer = { path = "../renet2_visualizer" }
eframe = "0.29"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
log = { version = "0.4", features = ["std"] }
env_logger = "0.11"
